test/files/neg/bug563.check
bug563.scala:6: error: missing parameter type
            map(n,ptr => new Cell(ptr.elem));
                  ^
one error found
